--- a/archives/toutiao-search/2023-11-30.md
+++ b/archives/toutiao-search/2023-11-30.md
@@ -1,59 +1,83 @@
 # 2023-11-30
 
-共 247 条
+共 269 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 30 2023 15:00:38 GMT+0800 (China Standard Time) -->
-1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
-1. [官方通报交警用棍击倒过路电动车](https://so.toutiao.com/search?keyword=官方通报交警用棍击倒过路电动车)
+<!-- 最后更新时间 Thu Nov 30 2023 16:00:40 GMT+0800 (China Standard Time) -->
+1. [习近平就基辛格逝世向拜登致唁电](https://so.toutiao.com/search?keyword=习近平就基辛格逝世向拜登致唁电)
+1. [广西通报交警持棍击倒电动车](https://so.toutiao.com/search?keyword=广西通报交警持棍击倒电动车)
 1. [12月一批民生新规开始施行](https://so.toutiao.com/search?keyword=12月一批民生新规开始施行)
-1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
-1. [大学生“整顿”羽绒服市场](https://so.toutiao.com/search?keyword=大学生“整顿”羽绒服市场)
+1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
+1. [拼多多员工前三季度人均创收1222万](https://so.toutiao.com/search?keyword=拼多多员工前三季度人均创收1222万)
+1. [拼多多如何摇身一变“多公子”](https://so.toutiao.com/search?keyword=拼多多如何摇身一变“多公子”)
 1. [基辛格被称为“中国人民的老朋友”](https://so.toutiao.com/search?keyword=基辛格被称为“中国人民的老朋友”)
-1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
-1. [炒股博主：今年亏了20多万](https://so.toutiao.com/search?keyword=炒股博主：今年亏了20多万)
-1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
+1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
+1. [奥司他韦不能预防病毒感染](https://so.toutiao.com/search?keyword=奥司他韦不能预防病毒感染)
 1. [重庆辟谣预制板房将大拆迁](https://so.toutiao.com/search?keyword=重庆辟谣预制板房将大拆迁)
 1. [西藏公务员给女孩输血事件全梳理](https://so.toutiao.com/search?keyword=西藏公务员给女孩输血事件全梳理)
 1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
-1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
+1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
 1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
+1. [大学生“整顿”羽绒服市场](https://so.toutiao.com/search?keyword=大学生“整顿”羽绒服市场)
+1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
+1. [基辛格逝世 儿子曾分享其长寿秘诀](https://so.toutiao.com/search?keyword=基辛格逝世+儿子曾分享其长寿秘诀)
+1. [赖岳谦：福建舰电弹测试令美国惊讶](https://so.toutiao.com/search?keyword=赖岳谦：福建舰电弹测试令美国惊讶)
+1. [易中天称雷军捐13亿让他深感惭愧](https://so.toutiao.com/search?keyword=易中天称雷军捐13亿让他深感惭愧)
+1. [胡锡进路遇每平20万元的楼盘](https://so.toutiao.com/search?keyword=胡锡进路遇每平20万元的楼盘)
+1. [巴以双方声明30日当天继续停火](https://so.toutiao.com/search?keyword=巴以双方声明30日当天继续停火)
+1. [马斯克爆粗口怒喷广告商](https://so.toutiao.com/search?keyword=马斯克爆粗口怒喷广告商)
+1. [多家友商纷纷向K70“开炮”](https://so.toutiao.com/search?keyword=多家友商纷纷向K70“开炮”)
+1. [500元羽绒服商场价卖两三千](https://so.toutiao.com/search?keyword=500元羽绒服商场价卖两三千)
+1. [曝印度计划花50亿美元打造新航母](https://so.toutiao.com/search?keyword=曝印度计划花50亿美元打造新航母)
+1. [业主装修发现卫生间承重墙填充泡沫](https://so.toutiao.com/search?keyword=业主装修发现卫生间承重墙填充泡沫)
+1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
+1. [美国各界向基辛格致悼词](https://so.toutiao.com/search?keyword=美国各界向基辛格致悼词)
+1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
+1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
+1. [大V：炫耀献血把救命变成滑稽事件](https://so.toutiao.com/search?keyword=大V：炫耀献血把救命变成滑稽事件)
+1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
+1. [俄外长出席欧安会议遭抵制？俄回应](https://so.toutiao.com/search?keyword=俄外长出席欧安会议遭抵制？俄回应)
+1. [基辛格：一个中国是中美关系前提](https://so.toutiao.com/search?keyword=基辛格：一个中国是中美关系前提)
+1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
+1. [卖淫团伙被抓：为逃避打击定期演练](https://so.toutiao.com/search?keyword=卖淫团伙被抓：为逃避打击定期演练)
+1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
+1. [以要哈马斯提交下批拟释放人员名单](https://so.toutiao.com/search?keyword=以要哈马斯提交下批拟释放人员名单)
+1. [曼联球迷喷爆奥纳纳：骗子](https://so.toutiao.com/search?keyword=曼联球迷喷爆奥纳纳：骗子)
+1. [基辛格首次访华：喝白酒吃烤鸭](https://so.toutiao.com/search?keyword=基辛格首次访华：喝白酒吃烤鸭)
+1. [泰伦·卢：科比·布朗会进入轮换](https://so.toutiao.com/search?keyword=泰伦·卢：科比·布朗会进入轮换)
+1. [“不干不净孩子没病”有道理吗](https://so.toutiao.com/search?keyword=“不干不净孩子没病”有道理吗)
+1. [名宿：奥纳纳本赛季欧冠表现挣扎](https://so.toutiao.com/search?keyword=名宿：奥纳纳本赛季欧冠表现挣扎)
+1. [村书记虚报“树影地”骗取补贴39万](https://so.toutiao.com/search?keyword=村书记虚报“树影地”骗取补贴39万)
+1. [标普：中国房地产即将触底](https://so.toutiao.com/search?keyword=标普：中国房地产即将触底)
+1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
+1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
+1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
+1. [媒体评献血事件：小姑姑身份应公布](https://so.toutiao.com/search?keyword=媒体评献血事件：小姑姑身份应公布)
+1. [退伍女兵在战友婚礼上踢正步](https://so.toutiao.com/search?keyword=退伍女兵在战友婚礼上踢正步)
+1. [官方通报交警用棍击倒过路电动车](https://so.toutiao.com/search?keyword=官方通报交警用棍击倒过路电动车)
+1. [炒股博主：今年亏了20多万](https://so.toutiao.com/search?keyword=炒股博主：今年亏了20多万)
+1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
 1. [德国总统访卡塔尔被晾在机场半小时](https://so.toutiao.com/search?keyword=德国总统访卡塔尔被晾在机场半小时)
 1. [俄外长专机被保加利亚拒绝飞越领空](https://so.toutiao.com/search?keyword=俄外长专机被保加利亚拒绝飞越领空)
-1. [媒体评献血事件：小姑姑身份应公布](https://so.toutiao.com/search?keyword=媒体评献血事件：小姑姑身份应公布)
-1. [多家友商纷纷向K70“开炮”](https://so.toutiao.com/search?keyword=多家友商纷纷向K70“开炮”)
 1. [大V谈富人关于楼市的3种认知](https://so.toutiao.com/search?keyword=大V谈富人关于楼市的3种认知)
 1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
-1. [马斯克爆粗口怒喷广告商](https://so.toutiao.com/search?keyword=马斯克爆粗口怒喷广告商)
 1. [南京闹市野猪乱窜被抓获](https://so.toutiao.com/search?keyword=南京闹市野猪乱窜被抓获)
 1. [多位美国政要悼念基辛格](https://so.toutiao.com/search?keyword=多位美国政要悼念基辛格)
-1. [拼多多员工前三季度人均创收1222万](https://so.toutiao.com/search?keyword=拼多多员工前三季度人均创收1222万)
 1. [演员马精武执教40年 学生个个大腕](https://so.toutiao.com/search?keyword=演员马精武执教40年+学生个个大腕)
 1. [锡安出战33分钟砍下33分8篮板6助攻](https://so.toutiao.com/search?keyword=锡安出战33分钟砍下33分8篮板6助攻)
-1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
-1. [业主装修发现卫生间承重墙填充泡沫](https://so.toutiao.com/search?keyword=业主装修发现卫生间承重墙填充泡沫)
 1. [基辛格去世 一个时代结束了](https://so.toutiao.com/search?keyword=基辛格去世+一个时代结束了)
 1. [以军进入难民营逮捕两巴勒斯坦青年](https://so.toutiao.com/search?keyword=以军进入难民营逮捕两巴勒斯坦青年)
-1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
 1. [小布什悼念基辛格](https://so.toutiao.com/search?keyword=小布什悼念基辛格)
-1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
 1. [菲或拉更多域外国家“巡航南海”](https://so.toutiao.com/search?keyword=菲或拉更多域外国家“巡航南海”)
-1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
 1. [00后边防女兵谈为国牺牲](https://so.toutiao.com/search?keyword=00后边防女兵谈为国牺牲)
-1. [基辛格逝世 儿子曾分享其长寿秘诀](https://so.toutiao.com/search?keyword=基辛格逝世+儿子曾分享其长寿秘诀)
-1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
 1. [德德玛孙女发长文缅怀奶奶](https://so.toutiao.com/search?keyword=德德玛孙女发长文缅怀奶奶)
 1. [胡锡进评献血事件：应看到正面价值](https://so.toutiao.com/search?keyword=胡锡进评献血事件：应看到正面价值)
 1. [支原体检测为何“假阴”率高](https://so.toutiao.com/search?keyword=支原体检测为何“假阴”率高)
 1. [男子一路尾随女子趁等电梯多次猥亵](https://so.toutiao.com/search?keyword=男子一路尾随女子趁等电梯多次猥亵)
 1. [媒体：柯文哲的地位和能量不可小觑](https://so.toutiao.com/search?keyword=媒体：柯文哲的地位和能量不可小觑)
-1. [“不干不净孩子没病”有道理吗](https://so.toutiao.com/search?keyword=“不干不净孩子没病”有道理吗)
-1. [标普：中国房地产即将触底](https://so.toutiao.com/search?keyword=标普：中国房地产即将触底)
 1. [王炳忠：台湾有条“统独”产业链](https://so.toutiao.com/search?keyword=王炳忠：台湾有条“统独”产业链)
 1. [媒体人盛赞李提香：真的好用](https://so.toutiao.com/search?keyword=媒体人盛赞李提香：真的好用)
-1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
 1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
-1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
 1. [“羽绒服一哥”危险信号曝光](https://so.toutiao.com/search?keyword=“羽绒服一哥”危险信号曝光)
 1. [在菲被绑架6名中国人已有4人被撕票](https://so.toutiao.com/search?keyword=在菲被绑架6名中国人已有4人被撕票)
 1. [《新闻女王》多达15位前港姐参演](https://so.toutiao.com/search?keyword=《新闻女王》多达15位前港姐参演)
@@ -73,7 +97,6 @@
 1. [恒大物业起诉中国恒大背后](https://so.toutiao.com/search?keyword=恒大物业起诉中国恒大背后)
 1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
 1. [女子爱吃生腌长寄生虫 被切除子宫](https://so.toutiao.com/search?keyword=女子爱吃生腌长寄生虫+被切除子宫)
-1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
 1. [王文序已任浙江省委常委](https://so.toutiao.com/search?keyword=王文序已任浙江省委常委)
 1. [中国驻美大使谈基辛格去世](https://so.toutiao.com/search?keyword=中国驻美大使谈基辛格去世)
 1. [以军在约旦河西岸与巴勒斯坦人冲突](https://so.toutiao.com/search?keyword=以军在约旦河西岸与巴勒斯坦人冲突)
@@ -112,7 +135,6 @@
 1. [基辛格逝世：其精神的现实意义](https://so.toutiao.com/search?keyword=基辛格逝世：其精神的现实意义)
 1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
 1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
-1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
 1. [专家：搞好股市不能总盯着3000点](https://so.toutiao.com/search?keyword=专家：搞好股市不能总盯着3000点)
 1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
 1. [中国新免签政策受到欧洲各界欢迎](https://so.toutiao.com/search?keyword=中国新免签政策受到欧洲各界欢迎)
