--- a/archives/toutiao-search/2023-11-30.md
+++ b/archives/toutiao-search/2023-11-30.md
@@ -1,30 +1,64 @@
 # 2023-11-30
 
-共 292 条
+共 313 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 30 2023 17:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 30 2023 18:00:53 GMT+0800 (China Standard Time) -->
 1. [习近平就基辛格逝世向拜登致唁电](https://so.toutiao.com/search?keyword=习近平就基辛格逝世向拜登致唁电)
-1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
-1. [链博会上的创新科技](https://so.toutiao.com/search?keyword=链博会上的创新科技)
 1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
-1. [男子家中自制“蚊子防空系统”](https://so.toutiao.com/search?keyword=男子家中自制“蚊子防空系统”)
+1. [链博会上的创新科技](https://so.toutiao.com/search?keyword=链博会上的创新科技)
 1. [易中天称雷军捐13亿让他深感惭愧](https://so.toutiao.com/search?keyword=易中天称雷军捐13亿让他深感惭愧)
-1. [4分钟看基辛格：中国人民的老朋友](https://so.toutiao.com/search?keyword=4分钟看基辛格：中国人民的老朋友)
 1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
-1. [奥司他韦不能预防病毒感染](https://so.toutiao.com/search?keyword=奥司他韦不能预防病毒感染)
+1. [4分钟看基辛格：中国人民的老朋友](https://so.toutiao.com/search?keyword=4分钟看基辛格：中国人民的老朋友)
 1. [雷军：捐款是为让中国有更多的华为](https://so.toutiao.com/search?keyword=雷军：捐款是为让中国有更多的华为)
-1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
-1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
-1. [研究称空腹16小时启动自噬功能](https://so.toutiao.com/search?keyword=研究称空腹16小时启动自噬功能)
-1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
-1. [三甲医院超收患者21万医疗费](https://so.toutiao.com/search?keyword=三甲医院超收患者21万医疗费)
-1. [西藏公务员给女孩输血事件全梳理](https://so.toutiao.com/search?keyword=西藏公务员给女孩输血事件全梳理)
-1. [4名中国公民在菲律宾遇害 使馆回应](https://so.toutiao.com/search?keyword=4名中国公民在菲律宾遇害+使馆回应)
-1. [拼多多人均创收1222万](https://so.toutiao.com/search?keyword=拼多多人均创收1222万)
+1. [魅族21开箱评测](https://so.toutiao.com/search?keyword=魅族21开箱评测)
+1. [奥司他韦不能预防病毒感染](https://so.toutiao.com/search?keyword=奥司他韦不能预防病毒感染)
 1. [女大学生当街撞衫50岁大妈](https://so.toutiao.com/search?keyword=女大学生当街撞衫50岁大妈)
-1. [武里南联社媒：是来踢球还是打仗的](https://so.toutiao.com/search?keyword=武里南联社媒：是来踢球还是打仗的)
+1. [基辛格逝世：其精神的现实意义](https://so.toutiao.com/search?keyword=基辛格逝世：其精神的现实意义)
+1. [慢镜还原浙江武里南联冲突全过程](https://so.toutiao.com/search?keyword=慢镜还原浙江武里南联冲突全过程)
+1. [西藏公务员给女孩输血事件全梳理](https://so.toutiao.com/search?keyword=西藏公务员给女孩输血事件全梳理)
+1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
+1. [直击国产巡飞弹海拔4600米精准打击](https://so.toutiao.com/search?keyword=直击国产巡飞弹海拔4600米精准打击)
+1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
+1. [胡锡进炒股首月觉得自己是新巴菲特](https://so.toutiao.com/search?keyword=胡锡进炒股首月觉得自己是新巴菲特)
+1. [国防部：福建舰正在开展系泊试验](https://so.toutiao.com/search?keyword=国防部：福建舰正在开展系泊试验)
+1. [吴艳妮回应整容：只割了双眼皮](https://so.toutiao.com/search?keyword=吴艳妮回应整容：只割了双眼皮)
+1. [大V：炫耀献血把救命变成滑稽事件](https://so.toutiao.com/search?keyword=大V：炫耀献血把救命变成滑稽事件)
+1. [生鲜灯将被禁用 部分商贩仍在观望](https://so.toutiao.com/search?keyword=生鲜灯将被禁用+部分商贩仍在观望)
+1. [泰伦·卢：哈登只想证明他仍是哈登](https://so.toutiao.com/search?keyword=泰伦·卢：哈登只想证明他仍是哈登)
+1. [演员王馥荔怀念马精武](https://so.toutiao.com/search?keyword=演员王馥荔怀念马精武)
 1. [马斯克爆粗口怒喷广告商](https://so.toutiao.com/search?keyword=马斯克爆粗口怒喷广告商)
+1. [胡锡进：相信股市会回到3200点](https://so.toutiao.com/search?keyword=胡锡进：相信股市会回到3200点)
+1. [张艺谋唐国强恩师马精武去世](https://so.toutiao.com/search?keyword=张艺谋唐国强恩师马精武去世)
+1. [华春莹发文缅怀基辛格](https://so.toutiao.com/search?keyword=华春莹发文缅怀基辛格)
+1. [拼多多人均创收1222万](https://so.toutiao.com/search?keyword=拼多多人均创收1222万)
+1. [三只羊网络CEO回应上市传闻](https://so.toutiao.com/search?keyword=三只羊网络CEO回应上市传闻)
+1. [拼多多如何摇身一变“多公子”](https://so.toutiao.com/search?keyword=拼多多如何摇身一变“多公子”)
+1. [王宗源全红婵出战多哈世锦赛选拔赛](https://so.toutiao.com/search?keyword=王宗源全红婵出战多哈世锦赛选拔赛)
+1. [电诈集团小头目“萍姐”落网](https://so.toutiao.com/search?keyword=电诈集团小头目“萍姐”落网)
+1. [国防部：若“台独”越红线决不手软](https://so.toutiao.com/search?keyword=国防部：若“台独”越红线决不手软)
+1. [深圳副市长陈清已任市委常委](https://so.toutiao.com/search?keyword=深圳副市长陈清已任市委常委)
+1. [大学生“整顿”羽绒服市场](https://so.toutiao.com/search?keyword=大学生“整顿”羽绒服市场)
+1. [基辛格的最后一个月都关注什么](https://so.toutiao.com/search?keyword=基辛格的最后一个月都关注什么)
+1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
+1. [A股收评：创业板指涨0.24%](https://so.toutiao.com/search?keyword=A股收评：创业板指涨0.24%)
+1. [基辛格和他的“缓和”时代](https://so.toutiao.com/search?keyword=基辛格和他的“缓和”时代)
+1. [大V谈富人关于楼市的3种认知](https://so.toutiao.com/search?keyword=大V谈富人关于楼市的3种认知)
+1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
+1. [詹姆斯：浓眉拉塞尔首节连战连捷](https://so.toutiao.com/search?keyword=詹姆斯：浓眉拉塞尔首节连战连捷)
+1. [研究称空腹16小时启动自噬功能](https://so.toutiao.com/search?keyword=研究称空腹16小时启动自噬功能)
+1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
+1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
+1. [邱毅：统“独”水火不容](https://so.toutiao.com/search?keyword=邱毅：统“独”水火不容)
+1. [截至10月底公募基金规模27.38万亿](https://so.toutiao.com/search?keyword=截至10月底公募基金规模27.38万亿)
+1. [《一念关山》的转场运镜](https://so.toutiao.com/search?keyword=《一念关山》的转场运镜)
+1. [国防部：菲澳巡逻加剧南海局势紧张](https://so.toutiao.com/search?keyword=国防部：菲澳巡逻加剧南海局势紧张)
+1. [炒股博主：今年基本天天亏](https://so.toutiao.com/search?keyword=炒股博主：今年基本天天亏)
+1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
+1. [男子家中自制“蚊子防空系统”](https://so.toutiao.com/search?keyword=男子家中自制“蚊子防空系统”)
+1. [三甲医院超收患者21万医疗费](https://so.toutiao.com/search?keyword=三甲医院超收患者21万医疗费)
+1. [4名中国公民在菲律宾遇害 使馆回应](https://so.toutiao.com/search?keyword=4名中国公民在菲律宾遇害+使馆回应)
+1. [武里南联社媒：是来踢球还是打仗的](https://so.toutiao.com/search?keyword=武里南联社媒：是来踢球还是打仗的)
 1. [多家友商纷纷向K70“开炮”](https://so.toutiao.com/search?keyword=多家友商纷纷向K70“开炮”)
 1. [朝鲜半岛对抗升级](https://so.toutiao.com/search?keyword=朝鲜半岛对抗升级)
 1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
@@ -33,33 +67,23 @@
 1. [赖岳谦：福建舰电弹测试令美国惊讶](https://so.toutiao.com/search?keyword=赖岳谦：福建舰电弹测试令美国惊讶)
 1. [退伍女兵在战友婚礼上踢正步](https://so.toutiao.com/search?keyword=退伍女兵在战友婚礼上踢正步)
 1. [现在打流感疫苗还来得及吗](https://so.toutiao.com/search?keyword=现在打流感疫苗还来得及吗)
-1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
-1. [国防部：福建舰正在开展系泊试验](https://so.toutiao.com/search?keyword=国防部：福建舰正在开展系泊试验)
 1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
-1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
-1. [大V：炫耀献血把救命变成滑稽事件](https://so.toutiao.com/search?keyword=大V：炫耀献血把救命变成滑稽事件)
 1. [我国已成全球第一鲍鱼养殖大国](https://so.toutiao.com/search?keyword=我国已成全球第一鲍鱼养殖大国)
-1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
 1. [媒体人盛赞李提香：真的好用](https://so.toutiao.com/search?keyword=媒体人盛赞李提香：真的好用)
 1. [德国总统访问卡塔尔将讨论巴以局势](https://so.toutiao.com/search?keyword=德国总统访问卡塔尔将讨论巴以局势)
-1. [拼多多如何摇身一变“多公子”](https://so.toutiao.com/search?keyword=拼多多如何摇身一变“多公子”)
 1. [男子一路尾随女子趁等电梯多次猥亵](https://so.toutiao.com/search?keyword=男子一路尾随女子趁等电梯多次猥亵)
 1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
-1. [吴艳妮回应整容：只割了双眼皮](https://so.toutiao.com/search?keyword=吴艳妮回应整容：只割了双眼皮)
-1. [王宗源全红婵出战多哈世锦赛选拔赛](https://so.toutiao.com/search?keyword=王宗源全红婵出战多哈世锦赛选拔赛)
 1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
 1. [哈马斯释放2名俄罗斯人质画面曝光](https://so.toutiao.com/search?keyword=哈马斯释放2名俄罗斯人质画面曝光)
 1. [英国诺丁汉市议会宣布该市破产](https://so.toutiao.com/search?keyword=英国诺丁汉市议会宣布该市破产)
 1. [高校一班级3年毕业全体保研8人直博](https://so.toutiao.com/search?keyword=高校一班级3年毕业全体保研8人直博)
 1. [哈马斯称以方拒绝停火协议延长条件](https://so.toutiao.com/search?keyword=哈马斯称以方拒绝停火协议延长条件)
-1. [张艺谋唐国强恩师马精武去世](https://so.toutiao.com/search?keyword=张艺谋唐国强恩师马精武去世)
 1. [美国新房价格一年来创纪录跌17.6%](https://so.toutiao.com/search?keyword=美国新房价格一年来创纪录跌17.6%)
 1. [广西通报交警持棍击倒电动车](https://so.toutiao.com/search?keyword=广西通报交警持棍击倒电动车)
 1. [12月一批民生新规开始施行](https://so.toutiao.com/search?keyword=12月一批民生新规开始施行)
 1. [拼多多员工前三季度人均创收1222万](https://so.toutiao.com/search?keyword=拼多多员工前三季度人均创收1222万)
 1. [基辛格被称为“中国人民的老朋友”](https://so.toutiao.com/search?keyword=基辛格被称为“中国人民的老朋友”)
 1. [重庆辟谣预制板房将大拆迁](https://so.toutiao.com/search?keyword=重庆辟谣预制板房将大拆迁)
-1. [大学生“整顿”羽绒服市场](https://so.toutiao.com/search?keyword=大学生“整顿”羽绒服市场)
 1. [基辛格逝世 儿子曾分享其长寿秘诀](https://so.toutiao.com/search?keyword=基辛格逝世+儿子曾分享其长寿秘诀)
 1. [胡锡进路遇每平20万元的楼盘](https://so.toutiao.com/search?keyword=胡锡进路遇每平20万元的楼盘)
 1. [巴以双方声明30日当天继续停火](https://so.toutiao.com/search?keyword=巴以双方声明30日当天继续停火)
@@ -70,7 +94,6 @@
 1. [俄外长出席欧安会议遭抵制？俄回应](https://so.toutiao.com/search?keyword=俄外长出席欧安会议遭抵制？俄回应)
 1. [基辛格：一个中国是中美关系前提](https://so.toutiao.com/search?keyword=基辛格：一个中国是中美关系前提)
 1. [卖淫团伙被抓：为逃避打击定期演练](https://so.toutiao.com/search?keyword=卖淫团伙被抓：为逃避打击定期演练)
-1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
 1. [以要哈马斯提交下批拟释放人员名单](https://so.toutiao.com/search?keyword=以要哈马斯提交下批拟释放人员名单)
 1. [曼联球迷喷爆奥纳纳：骗子](https://so.toutiao.com/search?keyword=曼联球迷喷爆奥纳纳：骗子)
 1. [基辛格首次访华：喝白酒吃烤鸭](https://so.toutiao.com/search?keyword=基辛格首次访华：喝白酒吃烤鸭)
@@ -87,7 +110,6 @@
 1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
 1. [德国总统访卡塔尔被晾在机场半小时](https://so.toutiao.com/search?keyword=德国总统访卡塔尔被晾在机场半小时)
 1. [俄外长专机被保加利亚拒绝飞越领空](https://so.toutiao.com/search?keyword=俄外长专机被保加利亚拒绝飞越领空)
-1. [大V谈富人关于楼市的3种认知](https://so.toutiao.com/search?keyword=大V谈富人关于楼市的3种认知)
 1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
 1. [南京闹市野猪乱窜被抓获](https://so.toutiao.com/search?keyword=南京闹市野猪乱窜被抓获)
 1. [多位美国政要悼念基辛格](https://so.toutiao.com/search?keyword=多位美国政要悼念基辛格)
@@ -155,7 +177,6 @@
 1. [山西太原3.7级地震无人员伤亡](https://so.toutiao.com/search?keyword=山西太原3.7级地震无人员伤亡)
 1. [中国向联合国机构提供百万美元援助](https://so.toutiao.com/search?keyword=中国向联合国机构提供百万美元援助)
 1. [胡锡进：中国人不缺大信心](https://so.toutiao.com/search?keyword=胡锡进：中国人不缺大信心)
-1. [基辛格逝世：其精神的现实意义](https://so.toutiao.com/search?keyword=基辛格逝世：其精神的现实意义)
 1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
 1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
 1. [专家：搞好股市不能总盯着3000点](https://so.toutiao.com/search?keyword=专家：搞好股市不能总盯着3000点)
